--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@apollo/react-hooks": "3.1.5",
     "@apollo/react-ssr": "3.1.5",
     "@apollo/react-testing": "3.1.4",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "@testing-library/jest-dom": "5.7.0",
     "@testing-library/react": "10.0.4",
     "@types/cookie": "0.3.3",
@@ -28,17 +31,22 @@
     "cookie": "0.4.1",
     "date-fns": "2.13.0",
     "faunadb": "^2.14.2",
+    "fp-ts": "^2.8.1",
+    "fp-ts-contrib": "^0.1.17",
     "graphql": "15.0.0",
     "graphql-tag": "2.10.3",
     "https-proxy-agent": "5.0.0",
     "i18next": "19.4.4",
     "identity-obj-proxy": "3.0.0",
+    "io-ts": "^2.2.9",
+    "io-ts-types": "^0.5.8",
     "isomorphic-unfetch": "3.0.0",
     "jest": "26.0.1",
     "next": "9.4.0",
     "normalize.css": "8.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^6.3.0",
     "react-i18next": "11.4.0",
     "sass": "1.26.5",
     "typescript": "3.8.3"
