--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-hook-form": "^6.3.0",
     "react-i18next": "11.4.0",
     "sass": "1.26.5",
+    "swr": "^0.3.0",
     "typescript": "3.8.3"
   },
   "devDependencies": {
