--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "jest": "26.0.1",
     "next": "9.4.0",
     "normalize.css": "8.0.1",
+    "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-i18next": "11.4.0",
+    "tailwindcss": "^1.9.2",
     "typescript": "3.8.3"
   },
   "devDependencies": {
