--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@types/jest": "25.2.1",
     "@types/react": "16.9.35",
     "babel-jest": "26.0.1",
+    "babel-plugin-graphql-tag": "2.5.0",
+    "graphql": "15.0.0",
+    "graphql-tag": "2.10.3",
     "cookie": "0.4.1",
     "date-fns": "2.13.0",
     "faunadb": "^2.14.2",
@@ -33,7 +36,15 @@
     "react-hook-form": "^6.9.2",
     "react-i18next": "11.4.0",
     "tailwindcss": "^1.9.2",
-    "typescript": "3.8.3"
+    "typescript": "3.8.3",
+    "StgGraphql": "git+https://github.com/obanb/StgGraphql",
+    "@apollo/react-hooks": "3.1.5",
+    "@apollo/react-ssr": "3.1.5",
+    "@apollo/react-testing": "3.1.4",
+    "apollo-cache-inmemory": "1.6.6",
+    "apollo-client": "2.6.9",
+    "apollo-link-context": "1.0.20",
+    "apollo-link-http": "1.5.17"
   },
   "devDependencies": {
     "prettier": "2.0.5"
