--- a/package.json
+++ b/package.json
@@ -10,24 +10,38 @@
     "vercel:dev": "vercel dev"
   },
   "dependencies": {
+    "@apollo/react-hooks": "3.1.5",
+    "@apollo/react-ssr": "3.1.5",
+    "@apollo/react-testing": "3.1.4",
     "@testing-library/jest-dom": "5.7.0",
     "@testing-library/react": "10.0.4",
     "@types/cookie": "0.3.3",
     "@types/date-fns": "2.6.0",
     "@types/jest": "25.2.1",
     "@types/react": "16.9.35",
+    "StgGraphql": "git+https://github.com/obanb/StgGraphql",
+    "apollo-cache-inmemory": "1.6.6",
+    "apollo-client": "2.6.9",
+    "apollo-link-context": "1.0.20",
+    "apollo-link-http": "1.5.17",
     "babel-jest": "26.0.1",
     "babel-plugin-graphql-tag": "2.5.0",
-    "graphql": "15.0.0",
-    "graphql-tag": "2.10.3",
     "cookie": "0.4.1",
     "date-fns": "2.13.0",
     "faunadb": "^2.14.2",
+    "fp-ts": "^2.8.5",
+    "fp-ts-contrib": "^0.1.21",
+    "graphql": "15.0.0",
+    "graphql-tag": "2.10.3",
     "https-proxy-agent": "5.0.0",
     "i18next": "19.4.4",
     "identity-obj-proxy": "3.0.0",
+    "io-ts": "^2.2.12",
+    "io-ts-types": "^0.5.11",
     "isomorphic-unfetch": "3.0.0",
     "jest": "26.0.1",
+    "monocle-ts": "^2.3.3",
+    "newtype-ts": "^0.3.4",
     "next": "9.4.0",
     "normalize.css": "8.0.1",
     "postcss-preset-env": "^6.7.0",
@@ -36,15 +50,7 @@
     "react-hook-form": "^6.9.2",
     "react-i18next": "11.4.0",
     "tailwindcss": "^1.9.2",
-    "typescript": "3.8.3",
-    "StgGraphql": "git+https://github.com/obanb/StgGraphql",
-    "@apollo/react-hooks": "3.1.5",
-    "@apollo/react-ssr": "3.1.5",
-    "@apollo/react-testing": "3.1.4",
-    "apollo-cache-inmemory": "1.6.6",
-    "apollo-client": "2.6.9",
-    "apollo-link-context": "1.0.20",
-    "apollo-link-http": "1.5.17"
+    "typescript": "3.8.3"
   },
   "devDependencies": {
     "prettier": "2.0.5"
