--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "io-ts": "^2.2.12",
     "io-ts-types": "^0.5.11",
     "isomorphic-unfetch": "3.0.0",
-    "jest": "26.0.1",
     "monocle-ts": "^2.3.3",
     "newtype-ts": "^0.3.4",
     "next": "9.4.0",
@@ -53,6 +52,7 @@
     "typescript": "3.8.3"
   },
   "devDependencies": {
+    "jest": "^26.0.1",
     "prettier": "2.0.5"
   }
 }
