--- a/package.json
+++ b/package.json
@@ -41,17 +41,20 @@
     "isomorphic-unfetch": "3.0.0",
     "monocle-ts": "^2.3.3",
     "newtype-ts": "^0.3.4",
-    "next": "9.4.0",
+    "next": "10.0.2",
+    "next-images": "^1.6.2",
     "normalize.css": "8.0.1",
     "postcss-preset-env": "^6.7.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-hook-form": "^6.9.2",
     "react-i18next": "11.4.0",
     "tailwindcss": "^1.9.2",
     "typescript": "3.8.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
+    "babel-plugin-inline-react-svg": "^1.1.2",
     "jest": "^26.0.1",
     "prettier": "2.0.5"
   }
